<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recuperar_contrasenya.ContrasenyaActualitzada"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Profile Image -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/logo"
            android:scaleType="centerCrop"
            android:src="@drawable/logo2" />

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_surface"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/recuperar_contrasenya"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>


    <!-- Login Form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/genial"
            android:textColor="@color/color_text"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/exit"
            android:textColor="@color/color_text"
            android:textSize="25sp" />


        <!-- Login Button -->
        <Button
            android:id="@+id/bInici"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/iniciar_sessio" />

    </LinearLayout>
</LinearLayout>