<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:background="@color/color_background"
    tools:context=".recuperar_contrasenya.RecuperarContrasenya">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Profile Image -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/logo"
            android:scaleType="centerCrop"
            android:src="@drawable/logo2" />

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_surface"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/recuperar_contrasenya"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>


    <!-- Login Form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/escriu_el_mail"
            android:textColor="@color/color_text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/iCorreu"
            style="@style/TextField"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="emailAddress"
            android:hint="@string/mail_exemple"
            android:inputType="textWebEmailAddress"
            android:padding="10dp"

            android:textSize="16sp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/bEnviar"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/enviar_codi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">


        <!-- Register Link -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sense_registre1"
            android:textColor="@color/color_text"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>