<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/color_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/tituloPoliticas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:paddingBottom="8dp"
        android:text="@string/aboutUs"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <TextView
            android:id="@+id/textoPoliticas"
            tools:ignore="VisualLintLongText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutUs2"
            android:textSize="16sp" />
    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="396dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        android:src="@drawable/logo2" />
</LinearLayout>