<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_background"
    tools:context=".aplicacio.EscriureCodi">
    <!-- Login Form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Profile Image -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/logo"
            android:scaleType="centerCrop"
            android:src="@drawable/logo2" />

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_surface"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/eCodi"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="14"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/codiTorneig"
            android:textColor="@color/color_text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/iContra2"
            style="@style/TextField"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/codiTorneig2"
            android:autofillHints="code"
            android:inputType="number"
            android:padding="10dp"
            android:textSize="16sp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/bActualitzar"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/buscarTorneig" />

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="proj.tcg.turnonauta.fragments.BottomMenu"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/fragment_bottom_menu"
        />
</LinearLayout>