<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_gravity="center_vertical"
        style="@style/TextField2"
        android:orientation="vertical">

        <!-- First Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="3">

            <TextView
                android:id="@+id/nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_text2"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:layout_margin="4dp"/>

            <TextView
                android:id="@+id/codi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/codi_text"
                android:textColor="@color/color_text2"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:layout_margin="4dp"/>

            <TextView
                android:id="@+id/joc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/joc_text"
                android:textColor="@color/color_text2"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:layout_margin="4dp"/>
        </LinearLayout>

        <!-- Second Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="4dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/format_text"
                android:textColor="@color/color_text2"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:layout_margin="4dp"/>

            <TextView
                android:id="@+id/jugadors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jugadors_text"
                android:textColor="@color/color_text2"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:layout_margin="4dp"/>
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>